@@ -3,6 +3,8 @@ ImpressCMS ChangeLog
 =============================================
 Unreleased : ImpressCMS 1.1 "???" Alpha
 =============================================
+
+- Added : icmsFeed for module developers (nachenko)
 - Added : Icms Uses UTF-8 encoding as default encoding.  (stranger)
 - Added : icms_createSalt function to generate a unique random salt key. (vaughan)
 - Added : icms_getUserSaltFromUname function to get the users unique salt key for logging in. (vaughan)
